trending topics, bug fix in dag

--- a/config/top_repo/tasks/config.yaml
+++ b/config/top_repo/tasks/config.yaml
@@ -2,4 +2,5 @@ defaults:
   - task1: 1_download
   - task2: 2_top_repos
   - task3: 3_top_per_topic
+  - task3bis: 3_trending_repo
   - task4: 4_write_results
