--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,6 @@ networkx = "^2.8"
 tqdm = "^4.64.0"
 pipe = "^1.6.0"
 openpyxl = "^3.0.10"
-hydra-core = "^1.2.0"
 PyYAML = "^6.0"
 fsspec = "^2022.10.0"
 gcsfs = "^2022.10.0"
@@ -22,6 +21,7 @@ sqlalchemy = "^1.4.43"
 rich = "^13.0.0"
 pyarrow = "^10.0.1"
 duckdb-engine = "^0.6.6"
+hydra-core = "^1.3.1"
 
 
 [tool.poetry.dev-dependencies]
@@ -39,9 +39,9 @@ interrogate = "^1.5.0"
 
 [tool.poetry.group.dev.dependencies]
 ipython-sql = "^0.4.1"
-nb-black = "^1.0.7"
 jupyter-emacskeys = "^0.2.3"
 pyinstrument = "^4.4.0"
+pdoc = "^12.3.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
