--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,8 @@ name = "trending-github"
 version = "0.1.0"
 description = ""
 authors=["acalio"] 
+packages=[{include = "src"}]
+
 [tool.poetry.dependencies]
 python = ">3.9"
 pdoc3 = "^0.10.0"
@@ -22,6 +24,7 @@ rich = "^13.0.0"
 pyarrow = "^10.0.1"
 duckdb-engine = "^0.6.6"
 hydra-core = "^1.3.1"
+fastparquet = "^2023.2.0"
 
 
 [tool.poetry.dev-dependencies]
@@ -42,6 +45,9 @@ ipython-sql = "^0.4.1"
 jupyter-emacskeys = "^0.2.3"
 pyinstrument = "^4.4.0"
 pdoc = "^12.3.1"
+ruff = "^0.0.245"
+mitoinstaller = "^0.0.197"
+memray = "^1.6.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
